# iperf-graph

./: .flake8  .gitignore  Pipfile  README.md  conf.toml  config_utils.py  graph_test.py  iperf_grapher.py  requirements.txt  setup.cfg  wip.py
.github/workflows/: actions.yaml
examples/: conf.toml  laptop_0ft_R.json  laptop_0ft_S.json
src/iperf_grapher/: config_file.py  iperf_grapher.py
tests/: config_file_test.py  config_utils_test.py  functional_test.py  iperf_grapher_test.py  test_graph.py
