[metadata]
name = iperf-grapher
version = 0.1.0
author = Colin Vallance
author_email = colin@cvallance.net
description = A utility to graph json output from iperf3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crvallance/iperf-graph
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    tomli
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    iperf-graph = iperf_grapher.iperf_grapher:main