[metadata]
name = iperf-grapher
version = 0.1.1
author = Colin Vallance
author_email = colin@cvallance.net
description = A utility to graph json output from iperf3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crvallance/iperf-graph
classifiers =
    Programming Language :: Python :: 3
    License :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib==3.5.1
    tomli==2.0.0
    click==8.0.3

[options.packages.find]
where = src
exclude =
    tests*

[options.entry_points]
console_scripts =
    iperf-grapher = iperf_grapher.iperf_grapher:main